# chess-qt

./: .gitignore  CMakeLists.txt  README.md
resources/: resources.qrc
src/: chessgame.cpp  chessgame.h  login.cpp  login.h  main.cpp  startdialog.cpp  startdialog.h
